<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9FBBD0"
    tools:context=".ui.SettingsActivity">

    <!-- Tombol Kembali -->
    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        android:contentDescription="@string/back_button"
        app:tint="#ffff" />

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/merriweathersans_bold"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Dark Mode Switch -->
    <LinearLayout
        android:id="@+id/darkModeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/darkModeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/merriweathersans_bold"
            android:text="@string/dark_mode"
            android:textColor="#fff"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/switch_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <!-- Notification Switch -->
    <LinearLayout
        android:id="@+id/notificationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/darkModeLayout"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/notificationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/merriweathersans_bold"
            android:text="@string/notification"
            android:textColor="#FFF"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/notificationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Privacy & Policy -->
    <TextView
        android:id="@+id/privacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notificationLayout"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/merriweathersans_bold"
        android:padding="16dp"
        android:text="@string/privacy_policy"
        android:textColor="#FFF"
        android:textSize="16sp" />

    <!-- About Us -->
    <TextView
        android:id="@+id/aboutUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/privacyPolicy"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/about_us"
        android:fontFamily="@font/merriweathersans_bold"
        android:textColor="#FFF"
        android:textSize="16sp" />
    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:background="@drawable/navbar_background"
        app:menu="@menu/bottom_navigation_menu"
        app:itemIconSize="35dp"
        app:labelVisibilityMode="labeled"
        app:itemPaddingTop="8dp"
        app:itemPaddingBottom="4dp"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</RelativeLayout>
